--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ input::placeholder, input {
     flex-direction: column;
     gap: 10px;
     padding: 50px;
+    padding-right: 70px;
     
 }
 
@@ -55,7 +56,8 @@ li:hover {
 }
 
 .max {
-    font-weight: 400;
+    font-weight: 500;
+    font-size: 20px;
 }
 
 .range {
