--- a/style.css
+++ b/style.css
@@ -27,15 +27,26 @@ input::placeholder, input {
 }
 
 
-.category, .filterPrice {
+.category {
     font-weight: 400;
+}
+
+.priceValue {
+    font-weight: 800;
+    font-size: smaller;
+}
+
+.priceRange {
+    width: 100%;
+    display: flex;
+    gap: 5px;
 }
 
 .leftSection {
     flex-direction: column;
     gap: 10px;
     padding: 50px;
-    padding-right: 70px;
+    
     
 }
 
@@ -47,11 +58,11 @@ input::placeholder, input {
 li {
     list-style: none;
     padding-bottom: 20px;
-    cursor: pointer;
 }
-li:hover {
+li:hover, .bookTitle:hover {
     color: orangered;
     font-weight: bold;
+    cursor: pointer;
 
 }
 
@@ -85,9 +96,6 @@ li:hover {
 }
 
 
-/* .bookTitle {
-    height: 100px;
-} */
 
 .author {
     font-size: smaller;
@@ -106,7 +114,7 @@ img {
 
 img:hover {
     transform: scale(1.2);
-    transition: 0.5s ease-in-out;
+    transition: 0.2s ease-in-out;
 }
 
 .lowerProduct {
