--- a/style.css
+++ b/style.css
@@ -13,11 +13,38 @@ body {
     display: flex;
 
 }
+
+
+.leftSection {
+    flex-direction: column;
+    gap: 10px;
+    padding: 50px 100px 50px 50px;
+    
+}
+.logoSection {
+    display: flex;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.brandLogo {
+    height: 50px;
+}
+
+.brandName {
+    font-size: 50px;
+    font-weight: 900;
+    padding-left: 10px;;
+}
+
+
+
 .searchbox {
  padding: 10px;
  height: 30px;
  border-radius: 10px;
  border: gray 1px solid;
+ width: 100%;
 }
 
 
@@ -40,15 +67,13 @@ input::placeholder, input {
     width: 100%;
     display: flex;
     gap: 5px;
+    justify-content: space-between;
 }
 
-.leftSection {
-    flex-direction: column;
-    gap: 10px;
-    padding: 50px;
-    
-    
+.rangeBtn {
+    width: 100%;
 }
+
 
 .cats {
     padding-left:  0;
@@ -106,13 +131,13 @@ li:hover, .bookTitle:hover {
     font-weight: bold;
 }
 
-img {
+.productImg {
     width: 150px;
     height: 200px;
     object-fit: cover;
 }
 
-img:hover {
+.productImg:hover {
     transform: scale(1.2);
     transition: 0.2s ease-in-out;
 }
