--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ body {
   height: 100vh;
   margin-right: 20px;
   background-color: #e8dfca;
+  overflow: hidden;
+  
   
   
 }
@@ -155,6 +157,7 @@ li:hover,
   width: 70%;
   display: flex;
   flex-direction: column;
+  overflow: auto;
   
 }
 
